--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "babylonjs": "^4.0.3",
     "babylonjs-gui": "^4.2.0",
+    "babylonjs-loaders": "^4.2.0",
     "cannon": "^0.6.2",
     "colyseus.js": "^0.14.0",
     "earcut": "^2.1.3",
